[iOS] video is sometimes allowed to play from the background https://bugs.webkit.org/show_bug.cgi?id=138522

Reviewed by Jer Noble.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::displayType): New.
* html/HTMLMediaElement.h:

* platform/audio/MediaSession.cpp:
(WebCore::MediaSession::isHidden): New, client passthrough.
(WebCore::MediaSession::displayType): Ditto.
* platform/audio/MediaSession.h:
(WebCore::MediaSessionClient::displayType):

* platform/audio/MediaSessionManager.cpp:
(WebCore::MediaSessionManager::sessionCanLoadMedia): New, default implementation returns
    true if client is visible or playing.
* platform/audio/MediaSessionManager.h:

* platform/audio/ios/MediaSessionManagerIOS.h:
* platform/audio/ios/MediaSessionManagerIOS.mm:
(WebCore::MediaSessionManageriOS::sessionCanLoadMedia): iOS override, also allows buffering
    when displaying optimized fullscreen.


Canonical link: https://commits.webkit.org/156357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175777 268f45cc-cd09-0410-ab3c-d52691b4dbfc